--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -10,8 +10,8 @@
     height: auto;
     max-width: 300px;
     /* min-width: 250px; */
-    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
-    border: 1px solid #e2e2e2;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    /* border: 1px solid #e2e2e2; */
     margin:  1rem;
 }
 
