successfully made connection with rest api

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -10,7 +10,7 @@
     height: auto;
     max-width: 300px;
     /* min-width: 250px; */
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
     /* border: 1px solid #e2e2e2; */
     margin:  1rem;
 }
@@ -121,13 +121,6 @@
 }
 
 .cart-qty-btn {
-    /* margin:  10px;
-    border-radius: 50%;
-    border: 1px solid #c2c2c2;
-    font-size: 2rem;
-    width: 40px;
-    height: 40px;
-    vertical-align:middle; */
 
     width: 28px;
     height: 28px;
